<resources>
    <string name="app_name">Mobile_Assignment3</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="submit">Submit</string>

</resources>
